case grants holy city

--- a/case-about-grants-incentives.html
+++ b/case-about-grants-incentives.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Optimized Air | BioTherm Solutions</title>
+	<title>Grants and Incentives | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -42,117 +42,117 @@
 	</div>
 </nav>
 
-<div class="page-header header-small header-filter" data-parallax="true" style=" background-image: url('img/page-tech.jpg'); ">
+<div class="page-header header-smallest header-filter" data-parallax="true" style="background:#000;">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized <b>Air</b></h1>
-				<h4><b>Biotherm creates innovative air technologies for plant growers. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</b></h4>
-			</div>
-		</div>
-		<!--<div class="row header-image-credit">
-			<div class="col-md-4 offset-md-8 text-right">
-				<p>
-					Flood Floor Irrigation: <b>The Project Name</b><br />
-					Ōkuma, Fukushima, Japan<br />
-					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
-				</p>
-			</div>
-		</div>-->
+
 	</div>
 </div>
 
 
 <div class="main main-raised">
 
-	<div class="container section">
-		<div class="row">
-			<div class="col-md-6">
-				<h3><b>Conditioning</b></h3>
-				<h5>BioTherm has teamed up with ChillKing to bring you a variety of greenhouse cooling solutions. We offer a wide array of chiller sizes and where electricity is at a premium, we offer an optional natural gas engine driven compressor. Chilled water can be distributed with many space saving options including custom air handling units as well as BioTherm fin products.</h5>
-				<h3><b>Dehumidification</b></h3>
-				<h5>BioTherm understands the demands of indoor gardening and greenhouse crops. A major issue is moisture control &amp; humidity management. ChillKing has developed a line of pragmatic dehumidification solutions for agricultural applications without compromising performance: The DehuKing! A saturated atmosphere will result in moisture removal up to 2GPH per KW.</h5>
-				<h5>The units were developed to make sure the equipment was easily servicable, so replacement parts can be purchased at most refridgeration and HVAC supply stores (and other brands can be substituted with our approval if the exact part number cannot be located).
-				<p><a href="hydro-flood.html"><button type="button" class="btn btn-success">Read More</button></a>
-			</div>
-			<div class="col-md-6">
-				<h3><b>CO<sub>2</sub> Enrichment</b></h3>
-				<h5>CO<sub>2</sub> levels are naturally low in a greenhouse environment as plants use available CO<sub>2</sub> as part of the photosynthetic process. Increasing CO<sub>2</sub> levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO<sub>2</sub> System can easily be integrated to achieve elevated CO<sub>2</sub> levels in the greenhouse environment. BioTherm systems pull CO<sub>2</sub> directly from the boilers exhaust gases and distribute them uniformly into the greenhouse environment, while ensureing other harmful gases are kept at a safe level. With a BioTherm CO<sub>2</sub> System, there is no need for large bulk tanks, or individual CO<sub>2</sub> burners. Theese systems can be used in indoor and greenhouse operations. </h5>
-				<p><a href="hydro-toob.html"><button type="button" class="btn btn-success">Read More</button></a></p>
-				<h3><b>Sanitization and Filtration</b></h3>
-				<h5>Each DehuKing unit comes with UV lights to sanitize the air as well as a variety of filtration</h5>
-			</div>
-		</div>
-		<div class="row">
-
-			
+<div class="container section">
+	
+	<div class="row">
+		<div class="col-md-12">
+			<span class="d-block p-4 bg-dark text-white">
+				<h3><b>Grants and Incentives</b></h3>
+			</span>
 		</div>
 	</div>
-	
-<div class="container">
+	<div class="row no-gutters">
+		<div class="col-md-4">
+			<span class="d-block p-2 bg-heat text-white"></span>
+		</div>
+		<div class="col-md-4">
+			<span class="d-block p-2 bg-hydro text-white"></span>
+		</div>
+		<div class="col-md-4">
+			<span class="d-block p-2 bg-success text-white"></span>
+		</div>
+	</div>
+
+	<div class="row section">
+		<div class="col-md-6">
+			<p><b>Offset your new project or capital improvement costs through Grants, State Rebates and Incentives.</b></p>
+			<p>We can identify potential funding, grant and utility rebates. Through our Energy Savings Calculator, we can provide detailed calculations on the efficiency of different heating options that we propose.</p>
+			<p><b>Grower-centric technologies eligible for incentives are:</b></p>
+			<p><ul>
+				<li>Condensing Boilers</li>
+				<li>Hot Water Distribution Systems</li>
+				<li>Energy/Shade Curtains</li>
+				<li>Condensing Unit Heaters</li>
+				<li>Variable Speed Drives</li>
+				<li>Environmental Control Systems</li>
+				<li>LED Lighting</li>
+				<li>Structure Re-glazing</li>
+				<li>Natural Ventilation Structures</li>
+			</ul></p>
+			<p>Once incentives have been identified, we can provide a reference to grant and incentive firm Sustainable Energy Financing to help you with the process of applying for these funds—regardless of technology. Our close working relationship provides a seamless interface to help you get the funding you deserve. <b>To learn more, please contact our grant and incentive specialist Dan Kuipers at (800) 438-4328.</b></p>
+		</div>
+		<div class="col-md-6">
+			<figure class="figure d-block">
+			  <img src="img/case_grants.jpg" class="figure-img img-fluid rounded" alt="">
+			</figure>
+		</div>
+		
+	</div>
+	<div class="row">
+		<h4 class="card-title">Incentive Case Study - Artcan Group, Fitchburg, MA</h4>
+	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-header-image">
-					<a href="img/air_conditioning.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/air_conditioning.jpg" /></a>
-				</div>
-				<div class="card-body ">
-					<h4 class="card-title">DehuKing</h4>
-					<h6 class="card-category text-muted">This is not your average meter.</h6>
-					<p class="card-description"></p>
-				</div>
-				<div class="card-footer justify-content-center">
-				</div>
-			</div>
+			<p><span class="d-block p-2 bg-success text-white"><b>The Challange</b></span></p>
+			<p>Artcan Group and its affiliated companies
+are producers of cannabis flower and associated
+products located in Fitchburg, MA. To
+become a leader in an evolving and competitive
+marketplace, a new high efficiency
+greenhouse encompassing approximately
+32,000 sq. ft. of production space is being
+planned.</p>
+			<p>Energy use and its associated cost will
+represent a sizeable portion of the facility’s
+operational expenses. Artcan believes that
+energy efficient technologies offer the best
+long-term option to remain profitable and
+minimize the risk associated with rising
+energy costs. However, the increased cost
+difference between “baseline” standard
+technologies and high-efficiency equipment
+is cost prohibitive without utility or government
+support.</p>
 		</div>
 		<div class="col-md-4">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-header-image">
-					<a href="img/air_enrichment.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/air_enrichment.jpg" /></a>
-				</div>
-				<div class="card-body ">
-					<h4 class="card-title">ChillKing</h4>
-					<h6 class="card-category text-muted"></h6>
-					<p class="card-description"> </p>
-				</div>
-				<div class="card-footer justify-content-center">
-				</div>
-			</div>
+			<p><span class="d-block p-2 bg-success text-white"><b>The BioTherm Solution</b></span></p>
+			<p>Many utility companies offer rebates and
+other incentives to motivate customers to
+purchase and operate high-efficiency
+equipment. BioTherm worked with Artcan
+to identify eligible energy-saving technologies
+and determine the amount of financial
+support that would be offered by their
+local utility.</p>
 		</div>
 		<div class="col-md-4">
-
-			<div class="card card-nav-tabs">
-				<div class="card-header card-header-success">
-					<div class="nav-tabs-navigation">
-						<div class="nav-tabs-wrapper">
-							<ul class="nav nav-tabs" data-tabs="tabs">
-								<li class="nav-item"><a class="nav-link active" href="#Hydra" data-toggle="tab">Hydra</a></li>
-								<li class="nav-item"><a class="nav-link" href="#Commander" data-toggle="tab">Commander</a></li>
-								<li class="nav-item"><a class="nav-link" href="#Roots" data-toggle="tab">Roots</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="card-body ">
-					<div class="tab-content text-center">
-						<div class="tab-pane active" id="Hydra">
-							<p></p>
-							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-						</div>
-						<div class="tab-pane" id="Commander">
-							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-						</div>
-						<div class="tab-pane" id="Roots">
-							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-						</div>
-					</div>
-				</div>
-			</div>
-
+			<p><span class="d-block p-2 bg-success text-white"><b>How It Works</b></span></p>
+			<p>BioTherm modeled and calculated expected
+energy usage for several design scenarios
+with varying degrees of efficiency.
+These calculations were then submitted to
+the local utility and reviewed for accuracy.
+Upon completion of the review, the
+amount of energy saved in each scenario
+was translated into a guaranteed dollar
+amount that would be offered to Artcan as
+an incentive to purchase more efficient
+(and more expensive) equipment. Through
+this process, Artcan saved $150,000
+through rebates and incentives.o</p>
 		</div>
 	</div>
-
 </div>
+
 </div>
 
 <!--     *********    FOOTER     *********      -->
@@ -185,17 +185,17 @@
 			</ul>
 		</div>
 		<div class="col-md-3">
-				<h5>Connect</h5>
-				<p><a href="tel:1-800-438-4328"><i class="fas fa-phone"></i> <strong>800-438-4328</strong></a></p>
+			<h5>Connect</h5>
+			<p><a href="tel:1-800-438-4328"><i class="fas fa-phone"></i> <strong>800-438-4328</strong></a></p>
 				<script>document.write("<n uers='znvygb:vasb@ovbgurezfbyhgvbaf.pbz'>vasb@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
-				<ul class="social-buttons">
-					<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
-				</ul>
+			<ul class="social-buttons">
+				<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
+			</ul>
 		</div>
 	</div>
 </div>
-	
+
 </div>
 </footer>
 <!--     *********   END FOOTER     *********      -->
@@ -207,6 +207,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
 <script src="js/init.js"></script>
 </body>
