--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,48 @@
 </div>-->
 	
 	
-<hr>
+<!--     *********    SIGNUP     *********      -->
+	<div class="" data-parallax="true" style="background:#5a5a5a">
+		<div class="container section">
+			<div class="row">
+				<div class="col-md-8 ml-auto mr-auto text-center">
+					<h3 class="title" style="color:#fff;">Sign Up for Our Newsletter</h3>
+					<h4 style="color:#fff;">If you're interested in our solutions, please sign up to recieve our newsletter. We won't spam you and we won't share your email address with anyone else.</h4>
+				</div>
+				<div class="col-md-10 ml-auto mr-auto">
+					<div class="card card-raised card-form-horizontal">
+						<div class="card-body">
+							<form action="https://biothermsolutions.us10.list-manage.com/subscribe/post?u=48c99220bd0be25b13d87b572&amp;id=f0535208b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+								<div class="row">
+									<div class="col-md-3">
+										<div class="form-group">
+											<input type="text" value="" placeholder="First Name" class="form-control" name="FNAME" id="mce-FNAME">
+										</div>
+									</div>
+									<div class="col-md-3">
+										<div class="form-group">
+											<input type="text" value="" placeholder="Last Name" class="form-control" name="LNAME" id="mce-LNAME">
+										</div>
+									</div>
+									<div class="col-md-3">
+										<div class="form-group">
+											<input type="email" value="" placeholder="Email Address" class="form-control required email" name="EMAIL" id="mce-EMAIL">
+										</div>
+									</div>
+									<div class="col-md-3">
+										
+										<button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-hydro signup btn-block">Sign up</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+<!--     *********    END SIGNUP     *********      -->
 	
 <div class="container">
 	<div class="row section">
@@ -258,36 +299,9 @@
 	</div>
 </div>
 
-<hr>
+<br /><br /><br /><br />
 		
-<div class="container section">
-	<div class="col-md-12 mx-auto">
-		<div class="row">
-			<h2 class="description">Grants and Incentives</h2>
-		</div>
-		<div class="row">
-			<div class="col-md-6">
-				<p>Offset your new project or capital improvement costs through Grants, State Rebates and Incentives. We can identify potential funding, grant and utility rebates. Through our Energy Savings Calculator, we can provide detailed calculations on the efficiency of different heating options that we propose.</p>
-				<p>Once incentives have been identified, we can provide a reference to grant and incentive firm Sustainable Energy Financing to help you with the process of applying for these funds—regardless of technology. Our close working relationship provides a seamless interface to help you get the funding you deserve. To learn more, please contact our grant and incentive specialist Dan Kuipers at (800) 438-4328.</p>
-			</div>
-			<div class="col-md-6">
-				<p>Grower-centric technologies eligible for incentives are:</p>
-				<p><ul>
-					<li>Condensing Boilers</li>
-					<li>Hot Water Distribution Systems</li>
-					<li>Energy/Shade Curtains</li>
-					<li>Condensing Unit Heaters</li>
-					<li>Variable Speed Drives</li>
-					<li>Environmental Control Systems</li>
-					<li>LED Lighting</li>
-					<li>Structure Re-glazing</li>
-					<li>Natural Ventilation Structures</li>
-				</ul></p>
-			</div>
-			
-		</div>
-	</div>
-</div>
+
 
 
 
