--- a/index.html
+++ b/index.html
@@ -296,24 +296,24 @@
 						<div class="col-md-3">
 							<div class="card card-plain card-blog">
 								<div class="card-header card-header-image">
-									<a href="post-spotlight-micheals-greenhouses.html"><img class="img img-raised" src="img/card2.jpg"></a>
+									<a href="case-hydro-holy-city-farms.html"><img class="img img-raised" src="img/card-holy-city.jpg"></a>
 								</div>
 								<div class="card-body ">
 									<h6 class="card-category text-danger"><i class="fas fa-map-marker-alt fa-2x"></i> Project</h6>
-									<h4 class="card-title"><a href="post-spotlight-micheals-greenhouses.html">Dissolved Oxygen for Irrigation Water</a></h4>
-									<p class="card-description">BioTherm provided Holy City with a complete Biotherm Oxygen Infusion package, which included a Toob Infuser, Oxygen Generator, and DO Commander in an effort to increased yield. <a href="post-spotlight-micheals-greenhouses.html"> Read More </a></p>
+									<h4 class="card-title"><a href="case-hydro-holy-city-farms.html">Dissolved Oxygen for Irrigation Water</a></h4>
+									<p class="card-description">BioTherm provided Holy City with a complete Biotherm Oxygen Infusion package, which included a Toob Infuser, Oxygen Generator, and DO Commander in an effort to increased yield. <a href="case-hydro-holy-city-farms.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="card card-plain card-blog">
 								<div class="card-header card-header-image">
-									<a href="post-considering-new-projects.html"><img class="img img-raised" src="img/card3.jpg"></a>
+									<a href="case-about-grants-incentives.html"><img class="img img-raised" src="img/card3.jpg"></a>
 								</div>
 								<div class="card-body ">
 									<h6 class="card-category text-info"><i class="fas fa-chart-line fa-2x"></i> Finance</h6>
-									<h4 class="card-title"><a href="post-considering-new-projects.html">Offset Capital Improvement Costs through Grants, State Rebates, and Incentives</a></h4>
-									<p class="card-description">Although it may seem like Spring just started, Summer is right around the corner and it's time to start thinking about upcoming expansions. <a href="post-considering-new-projects.html"> Read More </a></p>
+									<h4 class="card-title"><a href="case-about-grants-incentives.html">Offset Capital Improvement Costs</a></h5> </h4>
+									<p class="card-description">through Grants, State Rebates, and Incentives. We can identify potential funding, grant and utility rebates. Through our Energy Savings Calculator, we can provide detailed calculations on the efficiency of different solutions.  <a href="case-about-grants-incentives.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
@@ -498,8 +498,7 @@
 <script src="js/bootstrap-material-design.min.js"></script>
 <script src="js/material-kit.min.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
-<script src="js/instagram.js"></script>
-<script src="js/map.js"></script>
+
 <script src="js/init.js"></script>
 <script src="js/validator.js"></script>
 <script src="forms/contact.js"></script>
