--- a/case-hydro-holy-city-farms.html
+++ b/case-hydro-holy-city-farms.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Optimized Air | BioTherm Solutions</title>
+	<title>Case Study: Holy City Farms | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -42,117 +42,45 @@
 	</div>
 </nav>
 
-<div class="page-header header-small header-filter" data-parallax="true" style=" background-image: url('img/page-tech.jpg'); ">
+<div class="page-header header-smallest header-filter" data-parallax="true" style="background:#1c8bed;">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized <b>Air</b></h1>
-				<h4><b>Biotherm creates innovative air technologies for plant growers. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</b></h4>
-			</div>
-		</div>
-		<!--<div class="row header-image-credit">
-			<div class="col-md-4 offset-md-8 text-right">
-				<p>
-					Flood Floor Irrigation: <b>The Project Name</b><br />
-					Ōkuma, Fukushima, Japan<br />
-					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
-				</p>
-			</div>
-		</div>-->
+
 	</div>
 </div>
 
 
 <div class="main main-raised">
 
-	<div class="container section">
-		<div class="row">
-			<div class="col-md-6">
-				<h3><b>Conditioning</b></h3>
-				<h5>BioTherm has teamed up with ChillKing to bring you a variety of greenhouse cooling solutions. We offer a wide array of chiller sizes and where electricity is at a premium, we offer an optional natural gas engine driven compressor. Chilled water can be distributed with many space saving options including custom air handling units as well as BioTherm fin products.</h5>
-				<h3><b>Dehumidification</b></h3>
-				<h5>BioTherm understands the demands of indoor gardening and greenhouse crops. A major issue is moisture control &amp; humidity management. ChillKing has developed a line of pragmatic dehumidification solutions for agricultural applications without compromising performance: The DehuKing! A saturated atmosphere will result in moisture removal up to 2GPH per KW.</h5>
-				<h5>The units were developed to make sure the equipment was easily servicable, so replacement parts can be purchased at most refridgeration and HVAC supply stores (and other brands can be substituted with our approval if the exact part number cannot be located).
-				<p><a href="hydro-flood.html"><button type="button" class="btn btn-success">Read More</button></a>
-			</div>
-			<div class="col-md-6">
-				<h3><b>CO<sub>2</sub> Enrichment</b></h3>
-				<h5>CO<sub>2</sub> levels are naturally low in a greenhouse environment as plants use available CO<sub>2</sub> as part of the photosynthetic process. Increasing CO<sub>2</sub> levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO<sub>2</sub> System can easily be integrated to achieve elevated CO<sub>2</sub> levels in the greenhouse environment. BioTherm systems pull CO<sub>2</sub> directly from the boilers exhaust gases and distribute them uniformly into the greenhouse environment, while ensureing other harmful gases are kept at a safe level. With a BioTherm CO<sub>2</sub> System, there is no need for large bulk tanks, or individual CO<sub>2</sub> burners. Theese systems can be used in indoor and greenhouse operations. </h5>
-				<p><a href="hydro-toob.html"><button type="button" class="btn btn-success">Read More</button></a></p>
-				<h3><b>Sanitization and Filtration</b></h3>
-				<h5>Each DehuKing unit comes with UV lights to sanitize the air as well as a variety of filtration</h5>
-			</div>
-		</div>
-		<div class="row">
-
-			
+<div class="container section">
+	
+	<div class="row">
+		<div class="col-md-12">
+			<span class="d-block p-4 bg-dark text-white">
+				<img src="img/front-hydro-white-full.png" class="float-right" width=120px style="opacity: 0.1;"/> 
+				<h3><b>Case Study: Elizabeth Mitchell</b> <br />Holy City Farms, Charleston, SC <br /><b>Increased Yield and Healthier Plants</b></h3>
+			</span>
+			<span class="d-block p-2 bg-hydro text-white"></span>
+			<figure class="figure d-block">
+			  <img src="img/case_holy-city-farms.jpg" class="figure-img img-fluid rounded" alt="Holy City Farms - Charleston, SC">
+			</figure>
 		</div>
 	</div>
-	
-<div class="container">
 	<div class="row">
 		<div class="col-md-4">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-header-image">
-					<a href="img/air_conditioning.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/air_conditioning.jpg" /></a>
-				</div>
-				<div class="card-body ">
-					<h4 class="card-title">DehuKing</h4>
-					<h6 class="card-category text-muted">This is not your average meter.</h6>
-					<p class="card-description"></p>
-				</div>
-				<div class="card-footer justify-content-center">
-				</div>
-			</div>
+			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challange</b></span></p>
+			<p>Elizabeth struggled with summer crop failures two years in a row, and thought that excess heat was the cause. However, after making adjustments to keep her houses cooler, she discovered that something was wrong besides just the heat. She discovered that their irrigation water was too hot to hold an essential element…oxygen. Due to a lack of dissolved oxygen (DO) in their irrigation water, the roots of the plants were being smothered every time they watered causing the plants to suffocate and die from a condition known as Root Zone Hypoxia.</p>
 		</div>
 		<div class="col-md-4">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-header-image">
-					<a href="img/air_enrichment.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/air_enrichment.jpg" /></a>
-				</div>
-				<div class="card-body ">
-					<h4 class="card-title">ChillKing</h4>
-					<h6 class="card-category text-muted"></h6>
-					<p class="card-description"> </p>
-				</div>
-				<div class="card-footer justify-content-center">
-				</div>
-			</div>
+			<p><span class="d-block p-2 bg-hydro text-white"><b>The BioTherm Solution</b></span></p>
+			<p>BioTherm provided Holy City with a complete Biotherm Oxygen Infusion package. This included a <a href="">Toob Infuser</a>, <a href="">Oxygen Generator</a> and <a href="">DO Commander</a>. With this combination, she was able to infuse and manage the dissolved oxygen levels in her source water tank and maintain the infused levels direct to the rootzone of her plants. Given her remote location, the <a href="">Oxygen Generator</a> allowed her to have a dedicated oxygen supply and avoid tank refills. With the <a href="">DO Commander</a>, she was able to view DO levels at a glance on the touch screen.</p>
 		</div>
 		<div class="col-md-4">
-
-			<div class="card card-nav-tabs">
-				<div class="card-header card-header-success">
-					<div class="nav-tabs-navigation">
-						<div class="nav-tabs-wrapper">
-							<ul class="nav nav-tabs" data-tabs="tabs">
-								<li class="nav-item"><a class="nav-link active" href="#Hydra" data-toggle="tab">Hydra</a></li>
-								<li class="nav-item"><a class="nav-link" href="#Commander" data-toggle="tab">Commander</a></li>
-								<li class="nav-item"><a class="nav-link" href="#Roots" data-toggle="tab">Roots</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="card-body ">
-					<div class="tab-content text-center">
-						<div class="tab-pane active" id="Hydra">
-							<p></p>
-							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-						</div>
-						<div class="tab-pane" id="Commander">
-							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-						</div>
-						<div class="tab-pane" id="Roots">
-							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-						</div>
-					</div>
-				</div>
-			</div>
-
+			<p><span class="d-block p-2 bg-hydro text-white"><b>How It Works</b></span></p>
+			<p>Using the <a href="">Oxygen Generator</a>, Elizabeth generates her own oxygen supply and never has to worry about oxygen tanks running empty. This consistent and inexpensive supply of oxygen is directed to her Toob Infuser where irrigation water is infused with oxygen under pressure. To integrate the entire system, she uses the <a href="">DO Commander</a> to control the oxygen flow into the <a href="">Toob Infuser</a> and to constantly monitor DO levels in real time. Before installing the BioTherm Oxygen Infusion system, DO levels in the summer were under 4ppm. Now Elizabeth maintains 20ppm despite high temperature conditions and has plans to boost her DO levels even higher. Thanks to the BioTherm Oxygen Infusion system, low DO is no</p>
 		</div>
 	</div>
-
 </div>
+
 </div>
 
 <!--     *********    FOOTER     *********      -->
@@ -185,17 +113,17 @@
 			</ul>
 		</div>
 		<div class="col-md-3">
-				<h5>Connect</h5>
-				<p><a href="tel:1-800-438-4328"><i class="fas fa-phone"></i> <strong>800-438-4328</strong></a></p>
+			<h5>Connect</h5>
+			<p><a href="tel:1-800-438-4328"><i class="fas fa-phone"></i> <strong>800-438-4328</strong></a></p>
 				<script>document.write("<n uers='znvygb:vasb@ovbgurezfbyhgvbaf.pbz'>vasb@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
-				<ul class="social-buttons">
-					<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
-				</ul>
+			<ul class="social-buttons">
+				<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
+			</ul>
 		</div>
 	</div>
 </div>
-	
+
 </div>
 </footer>
 <!--     *********   END FOOTER     *********      -->
@@ -207,6 +135,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
 <script src="js/init.js"></script>
 </body>
