division top levels

--- a/about.html
+++ b/about.html
@@ -63,21 +63,37 @@
 <div class="container">
 	<div class="row section">
 		<div class="col-md-6 ml-auto mr-auto">
-			<h4 class="description">About</h4>		
-			<p>Established in 1980 as&nbsp;BioTherm Engineering, we&nbsp;created the first commercialized root zone heating (RZH) systems for commercial horticulture. BioTherm’s legacy product, all-aluminum SunFin&reg;, was developed in the 1950s and is considered the gold standard (performance rated by AHRI) for institutional greenhouse heating. Our BioTherm MicroClimate&trade; system was introduced in 1980, followed by a constant string of durable heating solutions like StarFin&trade;, DuoFin&trade;, MegaTube&trade;, and GreenPex&trade;.</p>
-			<p>We &nbsp;continued to grow and innovate new solutions for several decades. In&nbsp;2000, we expanded the company with TrueLeaf Technologies to better address the systems integration that the company does worldwide. In 2017 we merged the operations of TrueLeaf into BioTherm and continue to innovate new technologies to help commerical plant growers. Our team have been published in horticultural reference books and textbooks and several members led the process of developing heating guidelines for the National Greenhouse Manufacturers Association. Our deep knowledge comes from many years of experience in this very specialized and demanding field.</p>
-
-			<p>Our innovative and proven products will deliver years of service, but it is our team of professionals with decades of application experience that makes doing business with BioTherm a world-class experience. We deliver innovative solutions to meet the needs of our&nbsp;clients&nbsp;while contributing&nbsp;to their financial and environmental goals. &nbsp;We provide high quality products with excellent sales and service.&nbsp;</p>
-
+			<h4><b>Greetings ...</b></h4>	
+			<p>In 1980, we were teenagers working in a startup company with one innovative product, BioTherm Microclimate Heating. We had no idea that this would become our life’s work, and that we would be presenting you with more and more solutions to enhance your growing business. That first invention was foundational to us as we have continued to work hard to create new products to serve you, to make your job of growing plants easier.</p>
+			<p>It is now 2018, thirty-eight years have gone by in the blink of an eye! We are so enthusiastic to see the growth and diversification of horticulture. The industry is dynamic, with the advent of new crops being cultured and bright new people entering the space. We are delighted and proud to have a role in the burgeoning optimism that is horticulture today. Greenhouse growing is integral to the future, and BioTherm’s products are an important part of successful operations.</p>
+			<p>We are proud of the products you’ll find in this booklet, and we invite you to engage us in discussions about how they can help you in your operation. More importantly, we are singularly committed to your satisfaction and success with the solutions we provide. We are also very pleased to be partnering with the best greenhouse professionals in the game. We work hard to team up with the premiere greenhouse manufacturers and horticultural distributors around the world to deliver cleanly integrated solutions with your success in mind.</p>
+			<p>Inside, you’ll find our greenhouse “Heating Systems,” of course. We can deliver robust heating solutions in ways so flexible and efficient, there is no need to look any further. This year we are introducing our “Hydro Sciences” division to bring you integrated solutions for controlling irrigation water temperature as well as the exciting new Toob infusion systems for delivering stable dissolved oxygen levels for maximized production. Finally, our new “Optimized Air” division provides dehumidification, cooling, and engineered CO2 enrichment systems. All of these products can work independently or in combination.</p>
+			<p>The future of greenhouse production is brighter than ever, and our team is committed to bringing growers innovative solutions that work as hard as they do. For example, look for a new, redesigned, pre-assembled “Roll and Grow” heating mat to premiere in February 2019!</p>
+			<p>Here's to your growing enterprise!</p>
+			<h4><b>Jim Rearden &amp; Mike Muchow</b></p>
 		</div>
 		<div class="col-md-6 ml-auto mr-auto">
-			<div class="row">
-				<div class="col-md-4">
-					<h4 class="description">Industries</h4>
+			<div class="row no-gutters">
+				<div class="col-md-12">
+				<span class="d-block p-4 bg-dark text-white">
+					<h4><b>Our Experience</b></h4>
+				</span>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<span class="d-block p-2 bg-heat text-white"></span>
+				</div>
+				<div class="col-md-4">
+					<span class="d-block p-2 bg-hydro text-white"></span>
+				</div>
+				<div class="col-md-4">
+					<span class="d-block p-2 bg-success text-white"></span>
+				</div>
+			</div>
+			<div class="row no-gutters">
 				<div class="col-md-6">
+					<span class="d-block p-4 bg-dark text-white">
 					<h4 class="description">Greenhouse</h4>
 					<ul class="list-unstyled">
 					<li>Nexus Greenhouse Systems</li>
@@ -102,10 +118,12 @@
 					<li>&nbsp;</li>
 					<h4 class="description">Retail</h4>
 					<li>The Growbiz</li>
-						
+					<li>&nbsp;</li>
 					</ul>
+				</span>
 				</div>
 				<div class="col-md-6">
+					<span class="d-block p-4 bg-dark text-white">
 					<h4 class="description">Institutional</h4>
 					<ul class="list-unstyled">
 					<li>BASF</li>
@@ -114,7 +132,7 @@
 					<li>Clarke University</li>
 					<li>Clemson University</li>
 					<li>Cornell University</li>
-					<li>D Danforth Plant Science Center</li>
+					<li>D Danforth Plant Science</li>
 					<li>Forest House</li>
 					<li>Glenstone Foundation</li>
 					<li>Longwood Gardens</li>
@@ -132,11 +150,21 @@
 					<li>University of Wisconsin</li>
 					<li>Welby Gardens</li>
 					</ul>
+					</span>
 				</div>
 			</div>
+
 		</div>
 	</div>
 	
+	<div class="container">
+	<div class="row">
+		<h4><b>About</b></h4>		
+		<p>Established in 1980 as&nbsp;BioTherm Engineering, we&nbsp;created the first commercialized root zone heating (RZH) systems for commercial horticulture. BioTherm’s legacy product, all-aluminum SunFin&reg;, was developed in the 1950s and is considered the gold standard (performance rated by AHRI) for institutional greenhouse heating. Our BioTherm MicroClimate&trade; system was introduced in 1980, followed by a constant string of durable heating solutions like StarFin&trade;, DuoFin&trade;, MegaTube&trade;, and GreenPex&trade;.</p>
+		<p>We &nbsp;continued to grow and innovate new solutions for several decades. In&nbsp;2000, we expanded the company with TrueLeaf Technologies to better address the systems integration that the company does worldwide. In 2017 we merged the operations of TrueLeaf into BioTherm and continue to innovate new technologies to help commerical plant growers. Our team have been published in horticultural reference books and textbooks and several members led the process of developing heating guidelines for the National Greenhouse Manufacturers Association. Our deep knowledge comes from many years of experience in this very specialized and demanding field.</p>
+		<p>Our innovative and proven products will deliver years of service, but it is our team of professionals with decades of application experience that makes doing business with BioTherm a world-class experience. We deliver innovative solutions to meet the needs of our&nbsp;clients&nbsp;while contributing&nbsp;to their financial and environmental goals. &nbsp;We provide high quality products with excellent sales and service.&nbsp;</p>
+	</div>
+	</div>
 <!--     *********    TEAM     *********      -->
 <div class="section text-center">
 	<div class="row">
