--- a/air.html
+++ b/air.html
@@ -99,7 +99,11 @@
 				<div class="card-body ">
 					<h4 class="card-title">DehuKing</h4>
 					<h6 class="card-category text-muted">This is not your average meter.</h6>
-					<p class="card-description"></p>
+					<p class="card-description">DehuKing offers free-standing, self-contained dehumidification
+systems. Optimize the air in your growing environment
+with a dehumidifier that also filters, ionizes, and
+sanitizes. Multiple options available to customize your
+dehumidification.</p>
 				</div>
 				<div class="card-footer justify-content-center">
 				</div>
