--- a/heat.html
+++ b/heat.html
@@ -50,7 +50,7 @@
 			<div class="col-md-6">
 				<h1><img src="img/biotherm-heat.png" style="width:80px;"> <b>Heating</b> Systems</h1>
 				<h3>Efficient Greenhouse Heating</h3>
-				<h4>BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h4>
+				<h4><b>BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</b></h4>
 			</div>
 		</div>
 		<!--<div class="row header-image-credit">
