--- a/contact.html
+++ b/contact.html
@@ -230,12 +230,11 @@
 
 <!--     *********    END SIGNUP     *********      -->
 	
-<div class="container">
-	<div class="row section">
-	</div>
+<div class="container section">
+
 	<div class="row">
 		<div class="col-md-12 ml-auto mr-auto text-center">
-			<h2 class="description">Ordering Process</h2>
+			<h3 class="description">Ordering Process</h3>
 		</div>
 	</div>
 	<div class="row">
@@ -245,7 +244,7 @@
 
 				</div>
 				<div class="card-body">
-					<h4 class="card-title">Complimentary No-Obligation Consultation</h4>
+					<h4 class="card-title"><i class="fas fa-comments"></i> Complimentary No-Obligation Consultation</h4>
 					<h6 class="card-category text-muted"></h6>
 					<p class="card-description">Determine your needs through our user friendly questionnaire or let us do it for you. Our custom software compiles your information and provides a custom engineered solution to meet your performance requirements.</p>
 				</div>
@@ -259,7 +258,7 @@
 
 				</div>
 				<div class="card-body">
-					<h4 class="card-title">Proposal</h4>
+					<h4 class="card-title"><i class="fas fa-envelope"></i> Proposal</h4>
 					<h6 class="card-category text-muted"></h6>
 					<p class="card-description">Our easy-to-read proposal format clearly explains what’s in our system and how it operates. Enjoy unlimited flexibility and choices to determine your needs. Our sales engineers are readily available to answer any question or concerns you may have.</p>
 				</div>
@@ -273,7 +272,7 @@
 
 				</div>
 				<div class="card-body">
-					<h4 class="card-title">Order &amp; Contract</h4>
+					<h4 class="card-title"><i class="fas fa-file-alt"></i> Order &amp; Contract</h4>
 					<h6 class="card-category text-muted"></h6>
 					<p class="card-description">Simple, clear and complete agreement with reasonable payment terms and quick turnaround. Alternative Financing Our grant specialist is readily available to provide guidance on non-traditional financing such as grants and tax rebates that can offset your project. We can assist with the application (additional fee).</p>
 				</div>
@@ -287,7 +286,7 @@
 
 				</div>
 				<div class="card-body">
-					<h4 class="card-title">Delivery &amp; Support</h4>
+					<h4 class="card-title"><i class="fas fa-truck"></i> Delivery &amp; Support</h4>
 					<h6 class="card-category text-muted"></h6>
 					<p class="card-description">Unlimited technical support for two years from date of purchase. Boilers & boiler loops can be skid mounted. Includes custom CAD drawings of your facility and complete instructions. Need external help? We can recommend experienced greenhouse installers and get a specialist to your site. Replacement parts are readily available and promptly shipped.</p>
 				</div>
@@ -295,6 +294,11 @@
 					
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-8 ml-auto mr-auto text-center">
+			<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
 		</div>
 	</div>
 </div>
