--- a/index.html
+++ b/index.html
@@ -439,8 +439,13 @@
 		</div>
 	</div>-->
 <!--     *********    END CONTACT      *********      -->
-
-</br></br></br></br></br>
+<div class="container section">
+	<div class="row">
+		<div class="col-md-8 ml-auto mr-auto text-center">
+			<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
+		</div>
+	</div>
+</div>
 
 </div>
 
